--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
-		<!-- JWT -->
+<!--		&lt;!&ndash; JWT &ndash;&gt;-->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
@@ -81,6 +81,7 @@
 		</dependency>
 
 		<!-- JWT -->
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -89,6 +90,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>spring-boot-docker</finalName>
 	</build>
 
 </project>
