--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 debug=true
 
-#spring.security.user.name= suvee
-#spring.security.user.password=Pwd1
+spring.security.user.name= suvee
+spring.security.user.password=Pwd1
+
 
