--- a/src/main/resources/application-dev1.properties
+++ b/src/main/resources/application-dev1.properties
@@ -8,3 +8,14 @@ debug=true
 
 spring.security.user.name= suvee
 spring.security.user.password=Pwd1
+management.endpoint.health.show-details=always
+spring.mail.host=localhost
+spring.mail.port=25
+spring.mail.username=demo@localhost
+spring.mail.password=demopassword
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtps.quitwait=false
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
