--- a/src/main/resources/application-dev1.properties
+++ b/src/main/resources/application-dev1.properties
@@ -15,7 +15,7 @@ spring.mail.username=demo@localhost
 spring.mail.password=demopassword
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.properties.mail.smtps.quitwait=false 
+spring.mail.properties.mail.smtps.quitwait=false
 
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.transport.protocol=smtp
@@ -27,6 +27,6 @@ spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.redis.host=redis
 spring.redis.port=6379
