--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,19 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+spring.datasource.url=jdbc:mysql://localhost:3306/prod
 spring.datasource.username=root
 spring.datasource.password=Gandhi@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=false
 debug=true
-management.endpoint.health.show-details=always
-spring.mail.host=localhost
-spring.mail.port=25
-spring.mail.username=demo@localhost
-spring.mail.password=demopassword
-
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.properties.mail.smtps.quitwait=false
-spring.mail.properties.mail.smtp.socketFactory.port=465
-spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-spring.rabbitmq.host=localhost spring.rabbitmq.port=5672 spring.rabbitmq.username=guest spring.rabbitmq.password=guest
