--- a/employeechart/templates/ingress.yaml
+++ b/employeechart/templates/ingress.yaml
@@ -1,16 +1,42 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: my-app-ingress
-  annotations:
-  # Add your desired annotations here
+  name: my-ingress
 spec:
   rules:
     - host: my-app.example.com
       http:
         paths:
-          - path: /
-            pathType: ImplementationSpecific
+          - path: /fakesmtp
+            pathType: Prefix
+            backend:
+              service:
+                name: fakesmtp
+                port:
+                  number: 25
+          - path: /mysql
+            pathType: Prefix
+            backend:
+              service:
+                name: mysql
+                port:
+                  number: 3306
+          - path: /rabbitmq
+            pathType: Prefix
+            backend:
+              service:
+                name: rabbitmq
+                port:
+                  number: 5672
+          - path: /redis
+            pathType: Prefix
+            backend:
+              service:
+                name: redis
+                port:
+                  number: 6379
+          - path: /employeechart
+            pathType: Prefix
             backend:
               service:
                 name: employeechart
